server/config/parser.go

// line 1 "parser.rl"
package config

import (
	"io"
	"os"
	"fmt"
	"net"
	"strconv"
)


// line 12 "parser.rl"

// line 17 "parser.go"
var config_start int = 1
var config_first_final int = 560
var config_error int = 0

var config_en_main int = 1


// line 13 "parser.rl"

// some helpers
var booleans = map[string]bool {
	"true": true,
	"yes": true,
	"on": true,
	"1": true,
	"false": false,
	"no": false,
	"off": false,
	"0": false,
}

func getbool(val []byte) bool {
	return booleans[string(val)]
}

func getint(val []byte) int {
	if v, err := strconv.Atoi(string(val)); err == nil {
		return v
	}
	return 0
}


// line 208 "parser.rl"


func (conf *Config) Parse(r io.Reader) {
	cs, p, mark, pe, eof, buflen := 0, 0, 0, 0, 0, 16384
	done := false
	var cur interface{}
	data := make([]byte, buflen)

	
// line 61 "parser.go"
	cs = config_start

// line 217 "parser.rl"

	for !done {
		n, err := r.Read(data)
		pe = p + n
		if err == os.EOF {
			fmt.Println("yeahhhhh.")
			done = true
			eof = pe
		}

		
// line 76 "parser.go"
	{
	if p == pe { goto _test_eof }
	switch cs {
	case -666: // i am a hack D:
	fallthrough
case 1:
	switch data[p] {
		case 32: goto st2
		case 111: goto tr2
		case 112: goto tr3
	}
	if 9 <= data[p] && data[p] <= 13 { goto st2 }
	goto st0
st0:
cs = 0;
	goto _out;
st2:
	p++
	if p == pe { goto _test_eof2 }
	fallthrough
case 2:
	switch data[p] {
		case 32: goto st2
		case 112: goto tr3
	}
	if 9 <= data[p] && data[p] <= 13 { goto st2 }
	goto st0
tr3:
// line 77 "parser.rl"
	{ cur = defaultPort() }
	goto st3
tr633:
// line 78 "parser.rl"
	{
		port := cur.(*cPort)
		conf.Ports[port.Port] = port
		cur = nil
	}
// line 77 "parser.rl"
	{ cur = defaultPort() }
	goto st3
tr637:
// line 134 "parser.rl"
	{
		oper := cur.(*cOper)
		conf.Opers[oper.Username] = oper
		cur = nil
	}
// line 77 "parser.rl"
	{ cur = defaultPort() }
	goto st3
st3:
	p++
	if p == pe { goto _test_eof3 }
	fallthrough
case 3:
// line 133 "parser.go"
	if data[p] == 111 { goto st4 }
	goto st0
st4:
	p++
	if p == pe { goto _test_eof4 }
	fallthrough
case 4:
	if data[p] == 114 { goto st5 }
	goto st0
st5:
	p++
	if p == pe { goto _test_eof5 }
	fallthrough
case 5:
	if data[p] == 116 { goto st6 }
	goto st0
st6:
	p++
	if p == pe { goto _test_eof6 }
	fallthrough
case 6:
	if data[p] == 32 { goto st7 }
	goto st0
st7:
	p++
	if p == pe { goto _test_eof7 }
	fallthrough
case 7:
	if data[p] == 32 { goto st7 }
	if 48 <= data[p] && data[p] <= 57 { goto tr8 }
	goto st0
tr8:
// line 41 "parser.rl"
	{ mark = p }
	goto st8
st8:
	p++
	if p == pe { goto _test_eof8 }
	fallthrough
case 8:
// line 174 "parser.go"
	switch data[p] {
		case 10: goto tr9
		case 32: goto tr10
	}
	if 48 <= data[p] && data[p] <= 57 { goto st8 }
	goto st0
tr9:
// line 85 "parser.rl"
	{
		cur.(*cPort).Port = getint(data[mark:p])
	}
	goto st560
tr323:
// line 91 "parser.rl"
	{
		cur.(*cPort).BindIP = net.ParseIP(string(data[mark:p]))
	}
	goto st560
tr584:
// line 98 "parser.rl"
	{
		cur.(*cPort).Class = string(data[mark:p])
	}
	goto st560
tr602:
// line 105 "parser.rl"
	{
		cur.(*cPort).SSL = getbool(data[mark:p])
	}
	goto st560
tr623:
// line 111 "parser.rl"
	{
		cur.(*cPort).Zip = getbool(data[mark:p])
	}
	goto st560
st560:
	p++
	if p == pe { goto _test_eof560 }
	fallthrough
case 560:
// line 216 "parser.go"
	switch data[p] {
		case 32: goto tr631
		case 111: goto tr632
		case 112: goto tr633
	}
	if 9 <= data[p] && data[p] <= 13 { goto tr631 }
	goto st0
tr631:
// line 78 "parser.rl"
	{
		port := cur.(*cPort)
		conf.Ports[port.Port] = port
		cur = nil
	}
	goto st561
tr635:
// line 134 "parser.rl"
	{
		oper := cur.(*cOper)
		conf.Opers[oper.Username] = oper
		cur = nil
	}
	goto st561
st561:
	p++
	if p == pe { goto _test_eof561 }
	fallthrough
case 561:
// line 245 "parser.go"
	switch data[p] {
		case 32: goto st561
		case 111: goto tr2
		case 112: goto tr3
	}
	if 9 <= data[p] && data[p] <= 13 { goto st561 }
	goto st0
tr2:
// line 133 "parser.rl"
	{ cur = defaultOper() }
	goto st9
tr632:
// line 78 "parser.rl"
	{
		port := cur.(*cPort)
		conf.Ports[port.Port] = port
		cur = nil
	}
// line 133 "parser.rl"
	{ cur = defaultOper() }
	goto st9
tr636:
// line 134 "parser.rl"
	{
		oper := cur.(*cOper)
		conf.Opers[oper.Username] = oper
		cur = nil
	}
// line 133 "parser.rl"
	{ cur = defaultOper() }
	goto st9
st9:
	p++
	if p == pe { goto _test_eof9 }
	fallthrough
case 9:
// line 282 "parser.go"
	if data[p] == 112 { goto st10 }
	goto st0
st10:
	p++
	if p == pe { goto _test_eof10 }
	fallthrough
case 10:
	if data[p] == 101 { goto st11 }
	goto st0
st11:
	p++
	if p == pe { goto _test_eof11 }
	fallthrough
case 11:
	if data[p] == 114 { goto st12 }
	goto st0
st12:
	p++
	if p == pe { goto _test_eof12 }
	fallthrough
case 12:
	if data[p] == 32 { goto st13 }
	goto st0
st13:
	p++
	if p == pe { goto _test_eof13 }
	fallthrough
case 13:
	if data[p] == 32 { goto st13 }
	if data[p] > 90 {
		if 97 <= data[p] && data[p] <= 122 { goto tr16 }
	} else if data[p] >= 65 {
		goto tr16
	}
	goto st0
tr16:
// line 41 "parser.rl"
	{ mark = p }
	goto st14
st14:
	p++
	if p == pe { goto _test_eof14 }
	fallthrough
case 14:
// line 327 "parser.go"
	if data[p] == 32 { goto tr17 }
	if data[p] < 65 {
		if 48 <= data[p] && data[p] <= 57 { goto st14 }
	} else if data[p] > 90 {
		if 97 <= data[p] && data[p] <= 122 { goto st14 }
	} else {
		goto st14
	}
	goto st0
tr17:
// line 141 "parser.rl"
	{
		cur.(*cOper).Username = string(data[mark:p])
	}
	goto st15
st15:
	p++
	if p == pe { goto _test_eof15 }
	fallthrough
case 15:
// line 348 "parser.go"
	switch data[p] {
		case 32: goto st15
		case 123: goto st16
	}
	goto st0
st16:
	p++
	if p == pe { goto _test_eof16 }
	fallthrough
case 16:
	switch data[p] {
		case 32: goto st16
		case 98: goto st17
		case 104: goto st142
		case 107: goto st156
		case 108: goto st175
		case 112: goto st194
		case 114: goto st217
	}
	if 9 <= data[p] && data[p] <= 13 { goto st16 }
	goto st0
st17:
	p++
	if p == pe { goto _test_eof17 }
	fallthrough
case 17:
	if data[p] == 97 { goto st18 }
	goto st0
st18:
	p++
	if p == pe { goto _test_eof18 }
	fallthrough
case 18:
	if data[p] == 110 { goto st19 }
	goto st0
st19:
	p++
	if p == pe { goto _test_eof19 }
	fallthrough
case 19:
	if data[p] == 32 { goto st20 }
	goto st0
st20:
	p++
	if p == pe { goto _test_eof20 }
	fallthrough
case 20:
	switch data[p] {
		case 32: goto st20
		case 61: goto st21
	}
	goto st0
st21:
	p++
	if p == pe { goto _test_eof21 }
	fallthrough
case 21:
	if data[p] == 32 { goto st22 }
	goto st0
st22:
	p++
	if p == pe { goto _test_eof22 }
	fallthrough
case 22:
	switch data[p] {
		case 32: goto st22
		case 102: goto tr33
		case 110: goto tr34
		case 111: goto tr35
		case 116: goto tr36
		case 121: goto tr37
	}
	if 48 <= data[p] && data[p] <= 49 { goto tr32 }
	goto st0
tr32:
// line 41 "parser.rl"
	{ mark = p }
	goto st23
st23:
	p++
	if p == pe { goto _test_eof23 }
	fallthrough
case 23:
// line 432 "parser.go"
	switch data[p] {
		case 10: goto tr39
		case 32: goto tr40
		case 125: goto tr41
	}
	if 9 <= data[p] && data[p] <= 13 { goto tr38 }
	goto st0
tr38:
// line 168 "parser.rl"
	{
		cur.(*cOper).CanBan = getbool(data[mark:p])
	}
	goto st24
tr188:
// line 154 "parser.rl"
	{
		cur.(*cOper).HostMask = append(
			cur.(*cOper).HostMask, string(data[mark:p]))
	}
	goto st24
tr203:
// line 162 "parser.rl"
	{
		cur.(*cOper).CanKill = getbool(data[mark:p])
	}
	goto st24
tr225:
// line 180 "parser.rl"
	{
		cur.(*cOper).CanLink = getbool(data[mark:p])
	}
	goto st24
tr246:
// line 147 "parser.rl"
	{
		cur.(*cOper).Password = string(data[mark:p])
	}
	goto st24
tr274:
// line 174 "parser.rl"
	{
		cur.(*cOper).CanRenick = getbool(data[mark:p])
	}
	goto st24
st24:
	p++
	if p == pe { goto _test_eof24 }
	fallthrough
case 24:
// line 482 "parser.go"
	switch data[p] {
		case 32: goto st24
		case 125: goto st562
	}
	if 9 <= data[p] && data[p] <= 13 { goto st24 }
	goto st0
tr41:
// line 168 "parser.rl"
	{
		cur.(*cOper).CanBan = getbool(data[mark:p])
	}
	goto st562
tr190:
// line 154 "parser.rl"
	{
		cur.(*cOper).HostMask = append(
			cur.(*cOper).HostMask, string(data[mark:p]))
	}
	goto st562
tr205:
// line 162 "parser.rl"
	{
		cur.(*cOper).CanKill = getbool(data[mark:p])
	}
	goto st562
tr227:
// line 180 "parser.rl"
	{
		cur.(*cOper).CanLink = getbool(data[mark:p])
	}
	goto st562
tr276:
// line 174 "parser.rl"
	{
		cur.(*cOper).CanRenick = getbool(data[mark:p])
	}
	goto st562
st562:
	p++
	if p == pe { goto _test_eof562 }
	fallthrough
case 562:
// line 525 "parser.go"
	switch data[p] {
		case 32: goto tr635
		case 111: goto tr636
		case 112: goto tr637
	}
	if 9 <= data[p] && data[p] <= 13 { goto tr635 }
	goto st0
tr39:
// line 168 "parser.rl"
	{
		cur.(*cOper).CanBan = getbool(data[mark:p])
	}
	goto st25
tr85:
// line 154 "parser.rl"
	{
		cur.(*cOper).HostMask = append(
			cur.(*cOper).HostMask, string(data[mark:p]))
	}
	goto st25
tr99:
// line 162 "parser.rl"
	{
		cur.(*cOper).CanKill = getbool(data[mark:p])
	}
	goto st25
tr120:
// line 180 "parser.rl"
	{
		cur.(*cOper).CanLink = getbool(data[mark:p])
	}
	goto st25
tr140:
// line 147 "parser.rl"
	{
		cur.(*cOper).Password = string(data[mark:p])
	}
	goto st25
tr157:
// line 174 "parser.rl"
	{
		cur.(*cOper).CanRenick = getbool(data[mark:p])
	}
	goto st25
st25:
	p++
	if p == pe { goto _test_eof25 }
	fallthrough
case 25:
// line 575 "parser.go"
	switch data[p] {
		case 32: goto st25
		case 98: goto st26
		case 104: goto st45
		case 107: goto st59
		case 108: goto st78
		case 112: goto st97
		case 114: goto st109
		case 125: goto st562
	}
	if 9 <= data[p] && data[p] <= 13 { goto st25 }
	goto st0
st26:
	p++
	if p == pe { goto _test_eof26 }
	fallthrough
case 26:
	if data[p] == 97 { goto st27 }
	goto st0
st27:
	p++
	if p == pe { goto _test_eof27 }
	fallthrough
case 27:
	if data[p] == 110 { goto st28 }
	goto st0
st28:
	p++
	if p == pe { goto _test_eof28 }
	fallthrough
case 28:
	if data[p] == 32 { goto st29 }
	goto st0
st29:
	p++
	if p == pe { goto _test_eof29 }
	fallthrough
case 29:
	switch data[p] {
		case 32: goto st29
		case 61: goto st30
	}
	goto st0
st30:
	p++
	if p == pe { goto _test_eof30 }
	fallthrough
case 30:
	if data[p] == 32 { goto st31 }
	goto st0
st31:
	p++
	if p == pe { goto _test_eof31 }
	fallthrough
case 31:
	switch data[p] {
		case 32: goto st31
		case 102: goto tr57
		case 110: goto tr58
		case 111: goto tr59
		case 116: goto tr60
		case 121: goto tr61
	}
	if 48 <= data[p] && data[p] <= 49 { goto tr56 }
	goto st0
tr56:
// line 41 "parser.rl"
	{ mark = p }
	goto st32
st32:
	p++
	if p == pe { goto _test_eof32 }
	fallthrough
case 32:
// line 650 "parser.go"
	switch data[p] {
		case 10: goto tr39
		case 32: goto tr62
	}
	goto st0
tr62:
// line 168 "parser.rl"
	{
		cur.(*cOper).CanBan = getbool(data[mark:p])
	}
	goto st33
tr86:
// line 154 "parser.rl"
	{
		cur.(*cOper).HostMask = append(
			cur.(*cOper).HostMask, string(data[mark:p]))
	}
	goto st33
tr100:
// line 162 "parser.rl"
	{
		cur.(*cOper).CanKill = getbool(data[mark:p])
	}
	goto st33
tr121:
// line 180 "parser.rl"
	{
		cur.(*cOper).CanLink = getbool(data[mark:p])
	}
	goto st33
tr141:
// line 147 "parser.rl"
	{
		cur.(*cOper).Password = string(data[mark:p])
	}
	goto st33
tr158:
// line 174 "parser.rl"
	{
		cur.(*cOper).CanRenick = getbool(data[mark:p])
	}
	goto st33
st33:
	p++
	if p == pe { goto _test_eof33 }
	fallthrough
case 33:
// line 698 "parser.go"
	switch data[p] {
		case 10: goto st25
		case 32: goto st33
	}
	goto st0
tr57:
// line 41 "parser.rl"
	{ mark = p }
	goto st34
st34:
	p++
	if p == pe { goto _test_eof34 }
	fallthrough
case 34:
// line 713 "parser.go"
	if data[p] == 97 { goto st35 }
	goto st0
st35:
	p++
	if p == pe { goto _test_eof35 }
	fallthrough
case 35:
	if data[p] == 108 { goto st36 }
	goto st0
st36:
	p++
	if p == pe { goto _test_eof36 }
	fallthrough
case 36:
	if data[p] == 115 { goto st37 }
	goto st0
st37:
	p++
	if p == pe { goto _test_eof37 }
	fallthrough
case 37:
	if data[p] == 101 { goto st32 }
	goto st0
tr58:
// line 41 "parser.rl"
	{ mark = p }
	goto st38
st38:
	p++
	if p == pe { goto _test_eof38 }
	fallthrough
case 38:
// line 746 "parser.go"
	if data[p] == 111 { goto st32 }
	goto st0
tr59:
// line 41 "parser.rl"
	{ mark = p }
	goto st39
st39:
	p++
	if p == pe { goto _test_eof39 }
	fallthrough
case 39:
// line 758 "parser.go"
	switch data[p] {
		case 102: goto st40
		case 110: goto st32
	}
	goto st0
st40:
	p++
	if p == pe { goto _test_eof40 }
	fallthrough
case 40:
	if data[p] == 102 { goto st32 }
	goto st0
tr60:
// line 41 "parser.rl"
	{ mark = p }
	goto st41
st41:
	p++
	if p == pe { goto _test_eof41 }
	fallthrough
case 41:
// line 780 "parser.go"
	if data[p] == 114 { goto st42 }
	goto st0
st42:
	p++
	if p == pe { goto _test_eof42 }
	fallthrough
case 42:
	if data[p] == 117 { goto st37 }
	goto st0
tr61:
// line 41 "parser.rl"
	{ mark = p }
	goto st43
st43:
	p++
	if p == pe { goto _test_eof43 }
	fallthrough
case 43:
// line 799 "parser.go"
	if data[p] == 101 { goto st44 }
	goto st0
st44:
	p++
	if p == pe { goto _test_eof44 }
	fallthrough
case 44:
	if data[p] == 115 { goto st32 }
	goto st0
st45:
	p++
	if p == pe { goto _test_eof45 }
	fallthrough
case 45:
	if data[p] == 111 { goto st46 }
	goto st0
st46:
	p++
	if p == pe { goto _test_eof46 }
	fallthrough
case 46:
	if data[p] == 115 { goto st47 }
	goto st0
st47:
	p++
	if p == pe { goto _test_eof47 }
	fallthrough
case 47:
	if data[p] == 116 { goto st48 }
	goto st0
st48:
	p++
	if p == pe { goto _test_eof48 }
	fallthrough
case 48:
	if data[p] == 109 { goto st49 }
	goto st0
st49:
	p++
	if p == pe { goto _test_eof49 }
	fallthrough
case 49:
	if data[p] == 97 { goto st50 }
	goto st0
st50:
	p++
	if p == pe { goto _test_eof50 }
	fallthrough
case 50:
	if data[p] == 115 { goto st51 }
	goto st0
st51:
	p++
	if p == pe { goto _test_eof51 }
	fallthrough
case 51:
	if data[p] == 107 { goto st52 }
	goto st0
st52:
	p++
	if p == pe { goto _test_eof52 }
	fallthrough
case 52:
	if data[p] == 32 { goto st53 }
	goto st0
st53:
	p++
	if p == pe { goto _test_eof53 }
	fallthrough
case 53:
	switch data[p] {
		case 32: goto st53
		case 61: goto st54
	}
	goto st0
st54:
	p++
	if p == pe { goto _test_eof54 }
	fallthrough
case 54:
	if data[p] == 32 { goto st55 }
	goto st0
st55:
	p++
	if p == pe { goto _test_eof55 }
	fallthrough
case 55:
	switch data[p] {
		case 32: goto st55
		case 42: goto tr81
		case 46: goto tr81
		case 63: goto tr81
	}
	if data[p] < 65 {
		if 48 <= data[p] && data[p] <= 57 { goto tr81 }
	} else if data[p] > 90 {
		if 97 <= data[p] && data[p] <= 122 { goto tr81 }
	} else {
		goto tr81
	}
	goto st0
tr81:
// line 41 "parser.rl"
	{ mark = p }
	goto st56
st56:
	p++
	if p == pe { goto _test_eof56 }
	fallthrough
case 56:
// line 910 "parser.go"
	switch data[p] {
		case 42: goto st56
		case 46: goto st56
		case 64: goto st57
	}
	if data[p] < 63 {
		if 48 <= data[p] && data[p] <= 57 { goto st56 }
	} else if data[p] > 90 {
		if 97 <= data[p] && data[p] <= 122 { goto st56 }
	} else {
		goto st56
	}
	goto st0
st57:
	p++
	if p == pe { goto _test_eof57 }
	fallthrough
case 57:
	switch data[p] {
		case 42: goto st58
		case 46: goto st58
		case 63: goto st58
	}
	if data[p] < 65 {
		if 48 <= data[p] && data[p] <= 57 { goto st58 }
	} else if data[p] > 90 {
		if 97 <= data[p] && data[p] <= 122 { goto st58 }
	} else {
		goto st58
	}
	goto st0
st58:
	p++
	if p == pe { goto _test_eof58 }
	fallthrough
case 58:
	switch data[p] {
		case 10: goto tr85
		case 32: goto tr86
		case 42: goto st58
		case 46: goto st58
		case 63: goto st58
	}
	if data[p] < 65 {
		if 48 <= data[p] && data[p] <= 57 { goto st58 }
	} else if data[p] > 90 {
		if 97 <= data[p] && data[p] <= 122 { goto st58 }
	} else {
		goto st58
	}
	goto st0
st59:
	p++
	if p == pe { goto _test_eof59 }
	fallthrough
case 59:
	if data[p] == 105 { goto st60 }
	goto st0
st60:
	p++
	if p == pe { goto _test_eof60 }
	fallthrough
case 60:
	if data[p] == 108 { goto st61 }
	goto st0
st61:
	p++
	if p == pe { goto _test_eof61 }
	fallthrough
case 61:
	if data[p] == 108 { goto st62 }
	goto st0
st62:
	p++
	if p == pe { goto _test_eof62 }
	fallthrough
case 62:
	if data[p] == 32 { goto st63 }
	goto st0
st63:
	p++
	if p == pe { goto _test_eof63 }
	fallthrough
case 63:
	switch data[p] {
		case 32: goto st63
		case 61: goto st64
	}
	goto st0
st64:
	p++
	if p == pe { goto _test_eof64 }
	fallthrough
case 64:
	if data[p] == 32 { goto st65 }
	goto st0
st65:
	p++
	if p == pe { goto _test_eof65 }
	fallthrough
case 65:
	switch data[p] {
		case 32: goto st65
		case 102: goto tr94
		case 110: goto tr95
		case 111: goto tr96
		case 116: goto tr97
		case 121: goto tr98
	}
	if 48 <= data[p] && data[p] <= 49 { goto tr93 }
	goto st0
tr93:
// line 41 "parser.rl"
	{ mark = p }
	goto st66
st66:
	p++
	if p == pe { goto _test_eof66 }
	fallthrough
case 66:
// line 1031 "parser.go"
	switch data[p] {
		case 10: goto tr99
		case 32: goto tr100
	}
	goto st0
tr94:
// line 41 "parser.rl"
	{ mark = p }
	goto st67
st67:
	p++
	if p == pe { goto _test_eof67 }
	fallthrough
case 67:
// line 1046 "parser.go"
	if data[p] == 97 { goto st68 }
	goto st0
st68:
	p++
	if p == pe { goto _test_eof68 }
	fallthrough
case 68:
	if data[p] == 108 { goto st69 }
	goto st0
st69:
	p++
	if p == pe { goto _test_eof69 }
	fallthrough
case 69:
	if data[p] == 115 { goto st70 }
	goto st0
st70:
	p++
	if p == pe { goto _test_eof70 }
	fallthrough
case 70:
	if data[p] == 101 { goto st66 }
	goto st0
tr95:
// line 41 "parser.rl"
	{ mark = p }
	goto st71
st71:
	p++
	if p == pe { goto _test_eof71 }
	fallthrough
case 71:
// line 1079 "parser.go"
	if data[p] == 111 { goto st66 }
	goto st0
tr96:
// line 41 "parser.rl"
	{ mark = p }
	goto st72
st72:
	p++
	if p == pe { goto _test_eof72 }
	fallthrough
case 72:
// line 1091 "parser.go"
	switch data[p] {
		case 102: goto st73
		case 110: goto st66
	}
	goto st0
st73:
	p++
	if p == pe { goto _test_eof73 }
	fallthrough
case 73:
	if data[p] == 102 { goto st66 }
	goto st0
tr97:
// line 41 "parser.rl"
	{ mark = p }
	goto st74
st74:
	p++
	if p == pe { goto _test_eof74 }
	fallthrough
case 74:
// line 1113 "parser.go"
	if data[p] == 114 { goto st75 }
	goto st0
st75:
	p++
	if p == pe { goto _test_eof75 }
	fallthrough
case 75:
	if data[p] == 117 { goto st70 }
	goto st0
tr98:
// line 41 "parser.rl"
	{ mark = p }
	goto st76
st76:
	p++
	if p == pe { goto _test_eof76 }
	fallthrough
case 76:
// line 1132 "parser.go"
	if data[p] == 101 { goto st77 }
	goto st0
st77:
	p++
	if p == pe { goto _test_eof77 }
	fallthrough
case 77:
	if data[p] == 115 { goto st66 }
	goto st0
st78:
	p++
	if p == pe { goto _test_eof78 }
	fallthrough
case 78:
	if data[p] == 105 { goto st79 }
	goto st0
st79:
	p++
	if p == pe { goto _test_eof79 }
	fallthrough
case 79:
	if data[p] == 110 { goto st80 }
	goto st0
st80:
	p++
	if p == pe { goto _test_eof80 }
	fallthrough
case 80:
	if data[p] == 107 { goto st81 }
	goto st0
st81:
	p++
	if p == pe { goto _test_eof81 }
	fallthrough
case 81:
	if data[p] == 32 { goto st82 }
	goto st0
st82:
	p++
	if p == pe { goto _test_eof82 }
	fallthrough
case 82:
	switch data[p] {
		case 32: goto st82
		case 61: goto st83
	}
	goto st0
st83:
	p++
	if p == pe { goto _test_eof83 }
	fallthrough
case 83:
	if data[p] == 32 { goto st84 }
	goto st0
st84:
	p++
	if p == pe { goto _test_eof84 }
	fallthrough
case 84:
	switch data[p] {
		case 32: goto st84
		case 102: goto tr115
		case 110: goto tr116
		case 111: goto tr117
		case 116: goto tr118
		case 121: goto tr119
	}
	if 48 <= data[p] && data[p] <= 49 { goto tr114 }
	goto st0
tr114:
// line 41 "parser.rl"
	{ mark = p }
	goto st85
st85:
	p++
	if p == pe { goto _test_eof85 }
	fallthrough
case 85:
// line 1211 "parser.go"
	switch data[p] {
		case 10: goto tr120
		case 32: goto tr121
	}
	goto st0
tr115:
// line 41 "parser.rl"
	{ mark = p }
	goto st86
st86:
	p++
	if p == pe { goto _test_eof86 }
	fallthrough
case 86:
// line 1226 "parser.go"
	if data[p] == 97 { goto st87 }
	goto st0
st87:
	p++
	if p == pe { goto _test_eof87 }
	fallthrough
case 87:
	if data[p] == 108 { goto st88 }
	goto st0
st88:
	p++
	if p == pe { goto _test_eof88 }
	fallthrough
case 88:
	if data[p] == 115 { goto st89 }
	goto st0
st89:
	p++
	if p == pe { goto _test_eof89 }
	fallthrough
case 89:
	if data[p] == 101 { goto st85 }
	goto st0
tr116:
// line 41 "parser.rl"
	{ mark = p }
	goto st90
st90:
	p++
	if p == pe { goto _test_eof90 }
	fallthrough
case 90:
// line 1259 "parser.go"
	if data[p] == 111 { goto st85 }
	goto st0
tr117:
// line 41 "parser.rl"
	{ mark = p }
	goto st91
st91:
	p++
	if p == pe { goto _test_eof91 }
	fallthrough
case 91:
// line 1271 "parser.go"
	switch data[p] {
		case 102: goto st92
		case 110: goto st85
	}
	goto st0
st92:
	p++
	if p == pe { goto _test_eof92 }
	fallthrough
case 92:
	if data[p] == 102 { goto st85 }
	goto st0
tr118:
// line 41 "parser.rl"
	{ mark = p }
	goto st93
st93:
	p++
	if p == pe { goto _test_eof93 }
	fallthrough
case 93:
// line 1293 "parser.go"
	if data[p] == 114 { goto st94 }
